Introduce --link/--net-alias support
- Add -debug flag to the docker engine
- Change various log levels to Debugf
- Set -debug flag in docker-machine by default
- Start passing links to the portlayer
- Start passing aliases to the portlayer (after flattening them)
- Tidy up .gitignore/Makefile
